--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,30 +1,38 @@
 server:
   port: 8099
 
-datasource:
-  url: jdbc:mysql://127.0.0.1:3306/user?useUnicode=true&useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true
-  username: root
-  password: 123456zx.
-  driverClassName: com.mysql.cj.jdbc.Driver
-  #      #最大活跃数
-  maxActive: 20
-  #初始化数量
-  initialSize: 1
-  #最大连接等待超时时间
-  maxWait: 60000
-  #打开PSCache，并且指定每个连接PSCache的大小
-  poolPreparedStatements: true
-  maxPoolPreparedStatementPerConnectionSize: 20
-  #通过connectionProperties属性来打开mergeSql功能；慢SQL记录
-  #connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-  minIdle: 1
-  timeBetweenEvictionRunsMillis: 60000
-  minEvictableIdleTimeMillis: 300000
-  validationQuery: select 1 from dual
+spring:
+  jackson:
+    time-zone: GMT+8
+    date-format: yyyy-MM-dd HH:mm:ss
+  datasource:
+    url: jdbc:mysql://127.0.0.1:3306/user?serverTimezone=UTC&useUnicode=true&useSSL=false&autoReconnect=true&allowPublicKeyRetrieval=true
+    username: root
+    password: 123456zx.
+    driverClassName: com.mysql.cj.jdbc.Driver
+    maxActive: 20
+    initialSize: 1
+    maxWait: 60000
+    poolPreparedStatements: true
+    maxPoolPreparedStatementPerConnectionSize: 20
+    minIdle: 1
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: select 1 from dual
 
-  testWhileIdle: true
-  testOnBorrow: false
-  testOnReturn: false
-  #      配置监控统计拦截的filters，去掉后监控界面sql将无法统计,'wall'用于防火墙
-  #      filters: stat, wall, log4j
-  filters: stat, wall
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    filters: stat, wall
+
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+
+
+logging:
+  config: classpath:logback-spring.xml
+  level:
+    com.jay.mm: DEBUG
+jay:
+  mm:
+    jwt: 7786df7fc3a34e26a61c034d5ec8245d
