--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.14</version>
                 <configuration>
-                    <imageName>zhongye/crmmanager</imageName>
+                    <imageName>jay/mm</imageName>
                     <dockerDirectory>${project.basedir}</dockerDirectory>
                     <resources>
                         <resource>
